# SynopticPy

./: .gitignore  .readthedocs.yml  CITATION.cff  HOW-TO-RELEASE.md  LICENSE  MANIFEST.in  README.md  Untitled-1.ipynb  condaenv.pi4ficj2.requirements.txt  environment.yml  get_Synoptic.py  index.html  new_metadata_parser.ipynb  notes.md  plot_Synoptic.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  synoptic_issues.md  test.py  test.toml
.github/workflows/: static.yml  tests-python.yml
11ty-site/: .eleventy.js  README.md  package-lock.json  package.json
11ty-site/pages/: index.njk
11ty-site/pages/_data/: assets.js  global.js  root.js
11ty-site/pages/_includes/: footer.njk  head_pyscript.njk  modal_meteogram-readme.njk  navbar.njk
11ty-site/pages/_includes/_layouts/: default.njk
11ty-site/pages/_includes/head/: basic.njk  pyscript.njk
11ty-site/pages/_includes/modal/: latest-readme.njk  meteogram-readme.njk  timeseries-readme.njk  windrose-readme.njk
11ty-site/pages/_layouts/: default.njk
11ty-site/pages/app/: MOVED.njk  app.json  index.njk  latest.njk  meteogram.njk  timeseries.njk
11ty-site/pages/app/assets/css/: style.css
11ty-site/pages/app/assets/js/: themeSwitcher.js
11ty-site/pages/app/assets/python/: latest.py  timeseries.py
11ty-site/pages/app/web/: timeseries.njk
11ty-site/pages/web/: timeseries.njk
app/: index.html
app/assets/css/: style.css
app/assets/data/: us-cities.csv
app/assets/js/: themeSwitcher.js
app/assets/python/: timeseries.py
app/meteogram/: index.html
app/page2/: index.html
app/timeseries/: index.html
docs/: conf.py  index.html  index.rst  notes.md  remake_docs.sh
docs/_build/doctrees/: contribute.doctree  environment.pickle  index.doctree  reference_guide.doctree  synoptic.doctree
docs/_build/doctrees/reference_guide/: index.doctree
docs/_build/doctrees/user_guide/: contribute.doctree  example.doctree  examples.doctree  index.doctree  install.doctree  setup.doctree
docs/_build/html/: .buildinfo  contribute.html  genindex.html  index.html  objects.inv  py-modindex.html  reference_guide.html  search.html  searchindex.js  synoptic.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/synoptic/: get_token.html  services.html
docs/_build/html/_sources/: contribute.rst.txt  index.rst.txt  reference_guide.rst.txt  synoptic.rst.txt
docs/_build/html/_sources/user_guide/: contribute.rst.txt  example.md.txt  examples.md.txt  index.rst.txt  install.md.txt  setup.md.txt  setup.rst.txt
docs/_build/html/_static/: brian_style.css
docs/_build/html/_static/css/: index.73d71520a4ca3b99cfee5594769eaaae.css  index.c5995385ac14fb8791e8eb36b4908be2.css  index.f658d18f9b420779cfdf24aa0a7e2d77.css
docs/_build/html/_static/js/: index.1c5a1a01449ed65a7b51.js  index.3da636dd464baa7582d2.js
docs/_build/html/reference_guide/: index.html
docs/_build/html/user_guide/: contribute.html  example.html  examples.html  index.html  install.html  setup.html
docs/_static/: switcher.json
docs/reference_guide/: index.rst  namespace.rst  polars_namespace.rst  services.rst
docs/user_guide/: FAQ.ipynb  concepts.md  contribute.md  demo_Metadata.ipynb  demo_Precipitation.ipynb  demo_TimeSeries.ipynb  examples.md  how-to-pivot.ipynb  index.rst  install.md  roadmap.md  setup.md  setup.rst  style_guide.md
docs/user_guide/gallery/: UU-flux_towers.ipynb  archive_long_timeseries.ipynb  how-to-pivot.ipynb  local_timezone.ipynb  met_ascii2nc.ipynb  mission-weather.ipynb  pacific_grove_solar_radiation.ipynb  pacific_grove_solar_radiation_2020-09-09.ipynb  peter_sinks.ipynb  save-to-parquet.ipynb  utah-air-quality.ipynb  winds-chesapeake-bay.ipynb
docs/user_guide/services/: demo_TimeSeries.ipynb
docs/user_guide/services_tutorials/: Latency.ipynb  Latest.ipynb  Metadata.ipynb  NearestTime.ipynb  NetworkTypes.ipynb  Networks.ipynb  Precipitation.ipynb  QCTypes.ipynb  TimeSeries.ipynb  Variables.ipynb
metars/: parser.py
notebooks/: dev_plots.ipynb  dev_web_app_latest.ipynb  dev_web_app_windrose.ipynb  pandas_windrose.ipynb  plot_map.ipynb  plot_timeseries.ipynb  stations_metadata.ipynb  stations_nearesttime.ipynb  stations_nearesttime_latest.ipynb  stations_timeseries.ipynb  variables_networks_networktypes_qctypes.ipynb  🌁 Pacific Grove Smoke 2020-09-09.ipynb  🚢 Chesapeake_mouth_winds.ipynb
scripts/: plot_timeseries.py  ss_timeseries.py
src/synoptic/: __init__.py  get_token.py  json_parsers.py  namespace.py  params.py  polars_namespace.py  services.py  token.py
synoptic/: __init__.py  accessors.py  config.cfg  get_credentials.py  get_token.py  json_parsers.py  mytoken.py  namespace.py  plots.py  services.py  synoptic_polars.py  token.py  utils.py
tests/: test_Latency.py  test_Latest.py  test_Metadata.py  test_NearestTime.py  test_Precipitation.py  test_SynopticAPI.py  test_TimeSeries.py  test_accessors.py  test_api.py  test_charity.py  test_metadata_tables.py  test_namespace.py  test_simple.py  test_utils.py
tests/test_services/: test_Latency.py  test_Latest.py  test_Metadata.py  test_NearestTime.py  test_Precipitation.py  test_SynopticAPI.py  test_TimeSeries.py
web/: buttons.html  data.py  demo1.html  demo2.html  demo3.html  demo4.html  dev_plots.ipynb  duration_slider.html  index.html  meteogram.html  meteogram.py  temp.py  themeSwitcher.js  timeseries.html  timeseries.py  wind.py
