[metadata]
name = SynopticPy
description = Load mesonet weather and environmental data from the Synoptic API into a Pandas Dataframe.
author = Brian K. Blaylock
author_email = blaylockbk@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/blaylockbk/SynopticPy
project_urls =
    Source Code = https://github.com/blaylockbk/SynopticPy
    Documentation = https://blaylockbk.github.io/SynopticPy/_build/html/
    Release Notes = https://github.com/blaylockbk/SynopticPy/releases
    Bug Tracker = https://github.com/blaylockbk/SynopticPy/issues
keywords =
    meteorology
    weather
    mesonet
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.8
zip_safe = False
install_requires =
    numpy
    pandas
    requests
    toml

## Something wrong with the below??

#[options.extra_require]
#tests =
#    pytest
#    black
#    isort
#doc =
#    sphinx
#    nbsphinx
#    pydata-sphinx-theme
#    sphinx-design
#    autodocsumm
#    myst-parser
#
#[build_sphinx]
#source-dir = docs
#build-dir = docs/_build
#
