[metadata]
name = SynopticPy
description = Load mesonet weather and environmental data from the Synoptic API into a Pandas Dataframe.
author = Brian K. Blaylock
author_email = blaylockbk@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/blaylockbk/SynopticPy
project_urls =
    Source Code = https://github.com/blaylockbk/SynopticPy
    Documentation = https://synopticpy.readthedocs.io/
    Release Notes = https://github.com/blaylockbk/SynopticPy/releases
    Bug Tracker = https://github.com/blaylockbk/SynopticPy/issues
keywords =
    meteorology
    weather
    mesonet
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.8
zip_safe = False
install_requires =
    numpy
    pandas
    requests
    toml
    carpenter-workshop @ git+https://github.com/blaylockbk/Carpenter_Workshop.git

[options.extras_require]
docs =
    autodocsumm
    linkify-it-py
    myst-parser
    nbconvert
    nbsphinx
    pydata-sphinx-theme
    recommonmark
    sphinx
    sphinx-autosummary-accessors
    sphinx-design
    sphinx-markdown-tables
    sphinxcontrib-mermaid

#tests =
#    pytest
#    black
#    isort
#
#[build_sphinx]
#source-dir = docs
#build-dir = docs/_build
#
